loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:7: error: ';' expected but 'else' found.
  else if {
  ^