loopfor.LoopFor.scala.code

var nbpas=0
var compteur=0
if (estSurBiscuit==false){
  avance()
  nbpas=nbpas+1
  else if {
    prendBiscuit()
  }
  for (compteur<-1 to nbpas){
    recule()
  }
  
}